# AI-Travel-Planner-Agent

./: .gitignore  README.md  makefile  pyproject.toml
src/agents/: ActivitiesAgent.py  EventsAgent.py  FlightsAgent.py  HotelsAgent.py  RestaurantAgent.py  SupervisorAgent.py  TransportationAgent.py
src/app/: main.py
src/models/: ResearchResults.py  TripRequest.py  TripState.py  __init__.py
src/tools/: __init__.py  data_extraction_tool.py  web_search_tool.py
